# Barage-flow-Manager-Version-AI

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  seed_admin.py  seed_data.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: admin.py  auth.py  cooperatives.py  dam.py  forecast.py  (+3 more)
backend/app/core/: auth.py  database.py  rbac.py  security.py
backend/app/middleware/: rbac.py
backend/app/ml/: anomaly.py  drought_scorer.py  forecast.py  optimizer.py
backend/app/models/: __init__.py  alerte.py  audit_log.py  barrage.py  contract.py  cooperative.py  dam.py  demande_irrigation.py  forecast.py  lacher_eau.py  release_order.py  repartition.py  sensor.py  session.py  user.py
backend/app/routes/: repartition.py  users.py
backend/app/schemas/: __init__.py  alerte.py  auth.py  barrage.py  cooperative.py  dashboard.py  demande_irrigation.py  lacher_eau.py  repartition.py  user.py
backend/app/services/: allocation_service.py  audit_service.py  dam_service.py
backend/migrations/: env.py
backend/migrations/versions/: 814f56dc1e99_add_session_and_mfa_token_tables.py  972c4912b99a_add_all_models.py  e41a5e35523b_refine_types_to_match_er_diagram.py
backend/models/: __init__.py  dam.py  sensor.py  sensor_reading.py
backend/routes/: sensors.py
backend/schemas/: sensor_reading.py
backend/tests/: conftest.py  seed_users.py  test_models_schemas.py
backend/tests/unit/: test_allocation_service.py
(+25 files in other folders)
